# fantsu

./: CLAUDE.md  FANTSU_PLAN.md  FANTSU_TECHNICAL_PLAN.md  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: codespaces_plan.md  entity_map_redesign_plan.md  llm_player_plan.md  playtest_plan.md  prompt_plan.md
fantsu/: config.py  fanturer.py  groq_client.py  log.py  main.py  narrator.py  npc.py  ollama_client.py  prompts.py  renderer.py  state.py  tool_schema.py  tools.py  world.py
fantsu/clients/: __init__.py  _inline_tools.py  groq_client.py  z_client.py
tests/: conftest.py  test_groq_integration.py  test_llm_player.py  test_narrator.py  test_npc.py  test_playthrough.py  test_renderer.py  test_state.py  test_tools.py  test_world.py
