[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fantsu"
version = "0.1.0"
description = "A text adventure with LLM-backed NPCs"
requires-python = ">=3.11"
dependencies = ["ollama", "openai>=1.0"]

[project.scripts]
fantsu = "fantsu.main:main"
fanturer = "fantsu.fanturer:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["fantsu/"]
exclude = [
    "fantsu/main\\.py",
    "fantsu/fanturer\\.py",
    "fantsu/clients/groq_client\\.py",
    "fantsu/clients/ollama_client\\.py",
    "fantsu/clients/z_client\\.py",
]

[[tool.mypy.overrides]]
module = "ollama"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
